[package]
name = "mcp2515"
version = "0.1.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1.3.2"
embedded-hal = "0.2.7"
modular-bitfield = "0.11.2"
nb = "1.0.0"
ufmt = "0.1.0"
void = { version = "1.0.2", default-features = false }
