[package]
name = "mcp2515"
description = "`#![no_std]` library for interacting with MCP2515 CAN controller chips."
version = "0.2.2"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidcole1340/mcp2515-rs"
categories = ["no-std", "embedded"]
keywords = ["can", "mcp2515"]

[dependencies]
bitflags = "1.3.2"
embedded-hal = "0.2.7"
modular-bitfield = "0.11.2"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

defmt = { version = "0.3.2", optional = true }
ufmt = { version = "0.2.0", optional = true }
