[package]
name = "esp32"
version = "0.1.0"
authors = ["Bulalu <elishabulalu031@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.16.0", features = [ "esp32" ] }
esp-println = { version = "0.9.0", features = ["esp32"] }
mcp2515 = { git = "https://github.com/davidcole1340/mcp2515-rs.git" }
embedded-hal = "0.2.7"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
